# topo-renderer

./: .gitignore  Cargo.toml  Settings.toml  flake.nix  index.html  justfile  readme.md  toolchain.toml
.cargo/: config.toml
.helix/: languages.toml
data/: peaks_-10_-139.csv  peaks_-10_-38.csv  peaks_-10_-39.csv  peaks_-10_-40.csv  peaks_-10_-41.csv  peaks_-10_-42.csv  peaks_-10_-46.csv  peaks_-10_-62.csv  peaks_-10_-63.csv  peaks_-10_-64.csv  peaks_-10_-75.csv  peaks_-10_-76.csv  peaks_-10_-77.csv  peaks_-10_106.csv  peaks_-10_120.csv  peaks_-10_124.csv  peaks_-10_142.csv  peaks_-10_149.csv  peaks_-10_15.csv  peaks_-10_160.csv  peaks_-10_27.csv  peaks_-10_33.csv  peaks_-10_34.csv  peaks_-10_57.csv  peaks_-11_-139.csv  peaks_-11_-37.csv  peaks_-11_-38.csv  peaks_-11_-39.csv  peaks_-11_-40.csv  peaks_-11_-41.csv  peaks_-11_-42.csv  peaks_-11_-43.csv  peaks_-11_-44.csv  peaks_-11_-45.csv  peaks_-11_-61.csv  peaks_-11_-63.csv  peaks_-11_-64.csv  peaks_-11_-75.csv  peaks_-11_-76.csv  peaks_-11_-77.csv  (+8064 more)
resources/shaders/: compute_normals_corner_shader.wgsl  compute_normals_edge_shader.wgsl  compute_normals_shader.wgsl  line_shader.wgsl  postprocessing_shader.wgsl  render_shader.wgsl
src/: lib.rs  main.rs
src/common/: data.rs
src/render/: buffer.rs  camera.rs  camera_controller.rs  data.rs  geometry.rs  mod.rs  peaks.rs  pipeline.rs  render_buffer.rs  render_environment.rs  state.rs  texture.rs
topo-backend/: Cargo.toml
topo-backend/src/: main.rs
topo-common/: Cargo.toml
topo-common/src/: lib.rs
topo-renderer/: Cargo.toml  build.rs  index.html
topo-renderer-desktop/: Cargo.toml
topo-renderer-desktop/src/: main.rs
topo-renderer-new/: Cargo.toml
topo-renderer-new/src/: app.rs  lib.rs
topo-renderer-new/src/common/: data.rs
topo-renderer-new/src/control/: application_controllers.rs  background_runner.rs  mod.rs  ui_controller.rs
topo-renderer-new/src/data/: application_data.rs  mod.rs  peak.rs
topo-renderer-new/src/render/: application_renderers.rs  bound_texture_view.rs  buffer.rs  camera.rs  data.rs  mod.rs  pipeline.rs  render_engine.rs  terrain_renderer.rs  text_renderer.rs  texture.rs
topo-renderer-web/: Cargo.toml  LICENSE_MIT  index.html  main.js
topo-renderer-web/src/: js.rs  lib.rs
topo-renderer/src/: app.rs  lib.rs  main.rs
topo-renderer/src/common/: coordinate_transform.rs  mod.rs
topo-renderer/src/control/: application_controllers.rs  background_runner.rs  camera_controller.rs  ui_controller.rs
topo-renderer/src/data/: camera.rs  mod.rs
topo-renderer/src/render/: application_renderers.rs  bound_texture_view.rs  buffer.rs  camera.rs  camera_controller.rs  compute_pipeline.rs  data.rs  geometry.rs  line_renderer.rs  lines.rs  mod.rs  pipeline.rs  render_buffer.rs  render_engine.rs  render_environment.rs  state.rs  status.rs  terrain_renderer.rs  text.rs  text_renderer.rs  texture.rs
topo_backend/: Cargo.toml
topo_renderer/: Cargo.toml  index.html
topo_renderer/src/: lib.rs
topo_renderer/src/render/: buffer.rs  mod.rs  peaks.rs  pipeline.rs  render_buffer.rs  state.rs  text.rs
web/: serve.py
