[package]
name = "topo-renderer-web"
version = "0.1.0"
authors = ["Krzysztof Biedroń <arkendil@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
topo-renderer-new = { path = "../topo-renderer-new" }
topo-common = { path = "../topo-common" }

color-eyre = { workspace = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1"
log = { workspace = true }
wasm-bindgen = "0.2.84"
web-time = "1.0.1"
web-sys = { version = "0.3.77", features = ["HtmlSpanElement"] }
winit = { workspace = true }
wgpu = { workspace = true }
tokio_with_wasm = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
