[package]
name = "topo-renderer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
topo-common = { path = "../topo-common" }
glam = { version = "0.30.3", features = ["bytemuck"] }
bytemuck = { version = "1.23.0", features = ["derive"] }
bytes = "1.10.1"
console_error_panic_hook = "0.1.7"
console_log = "1"
env_logger = "0.11"
itertools = "0.14.0"
reqwest = { version = "0.13.1", features = ["stream"] }
geotiff = "0.1.0"
wgpu = { version = "28.0.0", features = ["webgpu"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
winit = "0.30.11"
log = { workspace = true }
csv = "1.3.1"
serde = { workspace = true }
color-eyre = { workspace = true }
approx = "0.5.1"
glyphon = "0.10.0"
futures = "0.3.31"
lyon = "1.0.1"
strum = { workspace = true }
tokio_with_wasm = { version = "0.8.7", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.0.1"
web-sys = { version = "0.3.77", features = ["HtmlSpanElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["full"] }

[build-dependencies]
config = { workspace = true }

[dev-dependencies]
rstest = "0.26.1"
